Getting rid of the trashy nav bar and going with awesome svg! EOM

--- a/src/style.css
+++ b/src/style.css
@@ -1,35 +1,8 @@
 /* apply a natural box layout model to all elements */
+
 * { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }
 
 body {
-	 background: #000 center;
-	 background-image: url(TwoNegativesLogo.png);
-	 background-repeat: no-repeat;
-   background-attachment: fixed;
-}
-
-.nav-bar {
-   color: yellow;
-   border-bottom: yellow solid 5px;
-   border-top: yellow solid 5px;
-   left: 0;
-   padding: 10px 0px;
-   position: fixed;
-   bottom: 0;
-   width: 100%;
-   text-align: center;
-}
-
-.nav-bar .item {
-   text-decoration: none;
-   color: yellow;
-   border-bottom: dotted 1px;   
-}
-
-.nav-bar .item:hover, .nav-bar .item:active {
-   border-bottom: solid #fff 1px;
-}
-
-.nav-bar .item:visited {
-   border-bottom: dotted #fff 1px;
+	 background: url('TwoNegativesLogo.svg') no-repeat center center fixed, #000;
+   background-size: cover;
 }
